import {SinSubject} from "./sin_subject";
export class ConcreteSin {
  public position: number;
  public name : String;
  public description : String;
  public examples : Array<String>;
}
