import {ConcreteSin} from "./concrete_sin";
export class SinSubject {
  name : string;
  sins : ConcreteSin[] = [];
}
